[package]
name = "roguelike"
version = "0.1.0"
authors = ["Marco G. Maia <marcogmaia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = ""
specs = "0.16.1"
specs-derive = ""
bracket-random = ""